[metadata]
name = numbering
version = 0.0.1
author = seanK200
author_email = yw.sean.kim@gmail.com
description = Python numbering made easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanK200/numbering
project_urls = 
    Repository = https://github.com/seanK200/numbering
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src